--- a/Sections/08_Introduction.Rmd
+++ b/Sections/08_Introduction.Rmd
@@ -30,7 +30,7 @@ The placenta is an essential organ that develops from the embryo to nurture its 
 Sometimes described as a "vascular organ", the placenta is responsible for the establishment and regulation of maternal-fetal blood flow.
 Maternal blood is entered from the uterine spiral arteries into the intervillous space of the placenta.
 Chorionic villi, the main structural unit of the placenta, are tree-like structures populating the intervillous space that connect to the umbilical cord.
-Deoxygenated and nutrient-depleted fetal blood travels through veins into the chorionic villi, and oxygenated blood returns arterially to the fetus [@wang2010].
+Deoxygenated and nutrient-depleted fetal blood travels through arteries into the chorionic villi, and oxygenated blood returns through veins to the fetus [@wang2010].
 Maternal-fetal blood exchange is essential for the proper growth of the fetus, as imbalances, such as placental insufficiency, a condition where the placenta does not deliver sufficient nutrients and oxygen to the developing fetus, can lead to complications such as fetal growth restriction, preeclampsia, and pre-term birth [@malhotra2019].
 The placenta also influences the maternal environment (cardiovascular, immune, and metabolic systems) through hormonal processes to support the proper nutrient and oxygen supply to the growing fetus [@napso2018a].
 Placental hormones such as those from the proclactin growth hormone family and steroids, are especially important in promoting maternal physiological adaptations to increase the bioavailability of nutrients to the fetus [@napso2018b].
