AG intro: more relevant CTB-EVT differentiation info

--- a/References/references.bib
+++ b/References/references.bib
@@ -1,4 +1,19 @@
 
+@article{rodesch1992,
+	title = {Oxygen measurements in endometrial and trophoblastic tissues during early pregnancy},
+	volume = {80},
+	issn = {1873-233X},
+	abstract = {Placental and endometrial partial pressures of oxygen (PO2) were measured using a polarographic oxygen electrode during the first trimester of pregnancy. Between 8-10 weeks' gestation, placental PO2 levels were significantly lower (P less than .001) than endometrial levels. A significant (P less than .001) increase was observed for placental PO2 values measured at 12-13 weeks compared with those obtained at 8-10 weeks. We suggest that the increase of placental PO2 at the end of the first trimester is related to the establishment of continuous maternal blood flow in the intervillous space.},
+	language = {eng},
+	number = {2},
+	journal = {Obstetrics and gynecology},
+	author = {Rodesch, F and Simon, P and Donner, C and Jauniaux, E},
+	month = aug,
+	year = {1992},
+	pmid = {1635745},
+	pages = {283--285},
+}
+
 @article{wang2020,
 	title = {The mechanisms by which trophoblast-derived molecules induce maternal–fetal immune tolerance},
 	volume = {17},
@@ -2773,4 +2788,31 @@ PMID: 17339426},
 	volume = {11},
 	doi = {10.3389/fimmu.2020.02070},
 	url = {https://www.frontiersin.org/article/10.3389/fimmu.2020.02070}
+}
+
+@article{haider2016,
+	title = {Notch1 controls development of the extravillous trophoblast lineage in the human placenta},
+	author = {Haider, Sandra and Meinhardt, Gudrun and Saleh, Leila and Fiala, Christian and Pollheimer, {Jürgen} and {Knöfler}, Martin},
+	year = {2016},
+	date = {2016},
+	journal = {Proceedings of the National Academy of Sciences},
+	pages = {E7710--E7719},
+	volume = {113},
+	number = {48},
+	doi = {10.1073/pnas.1612335113},
+	url = {http://www.pnas.org/lookup/doi/10.1073/pnas.1612335113}
+}
+
+@article{wakeland2017,
+	title = {Hypoxia Directs Human Extravillous Trophoblast Differentiation in a Hypoxia-Inducible Factor{\textendash}Dependent Manner},
+	author = {Wakeland, Anna K. and Soncin, Francesca and Moretto-Zita, Matteo and Chang, Ching-Wen and Horii, Mariko and Pizzo, Don and Nelson, Katharine K. and Laurent, Louise C. and Parast, Mana M.},
+	year = {2017},
+	month = {04},
+	date = {2017-04-01},
+	journal = {The American Journal of Pathology},
+	pages = {767--780},
+	volume = {187},
+	number = {4},
+	doi = {10.1016/j.ajpath.2016.11.018},
+	url = {http://www.sciencedirect.com/science/article/pii/S0002944017300214}
 }
