AG ch3 add parenthesis

--- a/Sections/10_Chapter_3.Rmd
+++ b/Sections/10_Chapter_3.Rmd
@@ -60,7 +60,7 @@ We further classified these DMCs by whether their methylation was in the "less t
 Most TB DMCs were in the less methylated direction (61% - first trimester, 88% term), whereas HB DMCs were often more methylated than other cell types (74% - first, 72% term).
 A list of 38,656--86,355 differentially methylated regions (DMRs) were identified (FDR\<0.01) using the R package *dmrcate* for each cell type and gestational age.
 
-To characterize the functional relevance of placental cell-specific DMCs, we tested these CpGs for enrichment in various genomic elements (chi-squared test, FDR\<0.05; term DMCs in Figure \@ref(fig:ch3fig1)c, first trimester DMCs in Figure \@ref(fig:figb4). Cell-specific DMCs were depleted in gene-related elements such as promoters, exons, 5′ UTRs, and 3′ UTRs. Instead, we saw significant enrichment in non-coding regions, such as open seas, CpG island shores, intergenic regions, introns, and enhancers. The level and direction of enrichment was highly consistent across first trimester and term cell DMCs. Less methylated DMCs were enriched for placental PMD regions [@schroeder2013] for TB but depleted for all other cell types.
+To characterize the functional relevance of placental cell-specific DMCs, we tested these CpGs for enrichment in various genomic elements (chi-squared test, FDR\<0.05; term DMCs in Figure \@ref(fig:ch3fig1)c, first trimester DMCs in Figure \@ref(fig:figb4)). Cell-specific DMCs were depleted in gene-related elements such as promoters, exons, 5′ UTRs, and 3′ UTRs. Instead, we saw significant enrichment in non-coding regions, such as open seas, CpG island shores, intergenic regions, introns, and enhancers. The level and direction of enrichment was highly consistent across first trimester and term cell DMCs. Less methylated DMCs were enriched for placental PMD regions [@schroeder2013] for TB but depleted for all other cell types.
 Functional enrichment analysis tested if GO or KEGG pathways were associated with cell-specific DMCs.
 We adjusted for the variable number of CpGs per gene to reduce bias in gene set analysis.
 EC and HB DMCs were enriched (FDR\<0.05) for terms related to intercellular interactions such as "cellular response to external stimulus", whereas stromal DMCs yielded more intracellular processes related to maintaining tissue structure, such as "actin cytoskeleton" and "collagen binding".
