AG ch4: remove empty microsatellite genotyping section

--- a/Sections/11_Chapter_4.Rmd
+++ b/Sections/11_Chapter_4.Rmd
@@ -63,7 +63,7 @@ kableExtra::kbl(
   kableExtra::kable_styling(full_width = TRUE)
 ```
 
-### Microsatellite genotyping
+<!-- ### Microsatellite genotyping --->
 
 ## Results
 
